# PersonaForge-

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml
docs/: IMPLEMENTATION_NOTES.md  trace-v1-architecture.drawio
samples/zhihu_mock_md/: answer-100001-为什么年轻人越来越不爱参加同学聚会.md  answer-100002-为什么很多人下班后只想躺着.md  answer-100003-为什么越长大越不想解释自己.md  answer-100004-为什么有些人越努力越焦虑.md  answer-100005-为什么很多人讨厌被说教.md  answer-100006-为什么大家越来越不相信画大饼.md  article-200001-普通人的表达欲为什么变少了.md  article-200002-为什么小城市的人情味也会让人累.md  pin-300001-关于拖延.md  pin-300002-关于体面.md  profile.json
src/personaforge/: SPEC.md  __init__.py  cli.py  env.py  llm.py
src/personaforge/crawler/: SPEC.md  __init__.py  exceptions.py  markdown.py  models.py  storage.py  zhihu.py  zhihu_browser.py
src/personaforge/eval/: SPEC.md  __init__.py  dataset.py  runner.py
src/personaforge/ingest/: SPEC.md  __init__.py  build.py  chunking.py  embeddings.py  index.py  loader.py  models.py  nodes.py  qdrant_index.py  query_understanding.py  retrieve.py
src/personaforge/persona/: SPEC.md  __init__.py  suggestions.py  writer.py
src/personaforge/web/: SPEC.md  __init__.py  app.py  schemas.py  service.py  streaming.py  trace.py
tests/: test_cli_crawl.py  test_crawler_markdown.py  test_eval.py  test_index.py  test_ingest.py  test_project_skeleton.py  test_query_understanding.py  test_retrieve.py  test_trace.py  test_web.py  test_writer.py  test_zhihu.py  test_zhihu_browser.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts  styles.css
